--- a/САЙТ/css/style.css
+++ b/САЙТ/css/style.css
@@ -53,7 +53,7 @@ body {
 header {
   background-image: url(../img/header/fon.png);
   background-size: cover;
-  height: 80vh;
+  height: 100%;
 }
 .header-h1 {
   font-weight: 700;
@@ -183,12 +183,12 @@ header {
 }
 #proizvodstvennoe {
   background-color: #f8f8f8;
-  height: 50vh;
+  height: 100%;
 }
 #sobst_proizv {
   background-image: url(../img/sobs_proizv/fon.png);
   background-size: cover;
-  height: 80vh;
+  height: 100%;
 }
 .sobst_proizv-h1 {
   text-transform: uppercase;
