--- a/САЙТ/css/style.css
+++ b/САЙТ/css/style.css
@@ -248,6 +248,9 @@ header {
 .trubi-block {
   height: 390px;
   background-color: #f8f8f8;
+  margin-bottom: 30px;
+  width: 32%;
+  margin-right: 10px;
 }
 .trubi-button {
   width: 270px;
@@ -258,4 +261,46 @@ header {
   color: white;
   background-color: #6699cc;
   border-radius: 5px;
+}
+#v_nalichii {
+  background-color: #f8f8f8;
+  height: 100%;
+}
+.v_nalichii-h1 {
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: 800;
+  text-align: center;
+  padding-top: 5%;
+}
+.v_nalichii-h4 {
+  padding-left: 30px;
+}
+.v_nalichii-block {
+  background-color: #fff;
+  padding: 20px;
+  width: 32%;
+  margin-right: 10px;
+}
+#pochemu {
+  background-color: #f8f8f8;
+}
+.pochemu-h1 {
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+}
+.pochemu-block {
+  width: 32%;
+  height: 100%;
+  padding: 15px;
+}
+.pochemu-block:hover {
+  background-color: #fff;
+}
+.pochemu-p {
+  padding: 25px;
+}
+.pochemu-img {
+  padding: 25px;
 }
