--- a/САЙТ/less/style.less
+++ b/САЙТ/less/style.less
@@ -1,3 +1,6 @@
+ // color-mixin
+ @blue: #6699cc;
+
 @font-face{
 	font-family: 'CompPro';
 	src: url(../fonts/PFDinTextCompPro-Regular.ttf);
@@ -53,7 +56,7 @@ body{
 header{
 	background-image: url(../img/header/fon.png);
 	background-size: cover;
-	height: 80vh;
+	height: 100%;
 
 }
 .header{
@@ -151,5 +154,225 @@ header{
 	&-span {
 		color: #6699cc;
 		padding-left: 5%;
+	}
+}
+
+.proizv{
+	&-h1{
+		text-transform: uppercase;
+		text-align: center;
+		padding-top: 5%;
+		font-size: 40px;
+	}
+	&-border{
+		border-bottom: 3px solid #6699cc;
+		text-align: center;
+		margin: auto;
+		width: 100px;
+		content: '';
+		padding-top: 20px;
+		margin-bottom: 120px;
+	}
+	&-span{
+		font-size: 30px;
+		color: @blue;
+	}
+	&-p{
+		font-size: 20px;
+	}
+	&-block{
+		margin-bottom: 50px;
+		&:hover{
+			width: 280px;
+			height: 200px;
+			background-color: white;
+			background-size: cover;
+		}
+	}
+}
+#proizvodstvennoe{
+	background-color: #f8f8f8;
+	height: 100%;
+}
+#sobst_proizv{
+	background-image: url(../img/sobs_proizv/fon.png);
+	background-size: cover;	
+	height: 100%;
+}
+.sobst_proizv{
+	&-h1{
+		text-transform: uppercase;
+		font-size: 40px;
+		padding-top: 5%;
+		text-align: center;
+	}
+	&-block{
+		background-image: url(../img/sobs_proizv/block-fon.png);
+		background-size: cover;
+		margin: 5px;
+	}
+	&-h3{
+		text-transform: uppercase;
+		margin: 50px;
+		font-weight: 900;
+	}
+}
+#postavka{
+	background-color: #f8f8f8;
+}
+.postavka{
+	&-h1{
+		font-weight: 800;
+		text-transform: uppercase;
+		text-align: center;
+		padding-top: 5%;
+	}
+	&-p{
+		font-size: 20px;
+		padding: 10px;
+	}
+	&-block{
+		margin-right: 15px;
+		&:hover{
+			background-color: #fff;
+		}
+	}
+}
+.trubi{
+	&-h2{
+		color: @blue;	
+		padding-top: 25px;
+	}
+	&-p{
+		font-size: 20px;
+		padding: 20px 0;
+		font-weight: 300;
+	}
+	&-h3{
+		font-size: 20px;
+		font-weight: 800;
+		padding-left: 25px;
+	}
+	&-li{
+		font-size: 16px;
+	}
+	&-img{
+		width: 100%;
+	}
+	&-block{
+		height: 390px;
+		background-color: #f8f8f8;
+		margin-bottom: 30px;
+		width: 32%;
+		margin-right: 10px;
+	}
+	&-button{
+		width: 270px;
+		height: 60px;
+		line-height: 60px;
+		font-size: 20px;
+		border: none;
+		color: white;
+		background-color: @blue;
+		border-radius: 5px;
+	}
+}
+#v_nalichii{
+	background-color: #f8f8f8;
+	height: 100%;
+}
+.v_nalichii{
+	&-h1{
+		font-size: 40px;
+		text-transform: uppercase;
+		font-weight: 800;
+		text-align: center;
+		padding-top: 5%;
+	}
+	&-h4{
+		padding-left: 30px;
+	}
+	&-block{
+		background-color: #fff;
+		padding: 20px;
+		width: 32%;
+		margin-right: 10px;
+	}
+}
+#pochemu{
+	background-color: #f8f8f8;
+}
+.pochemu{
+	&-h1{
+		text-transform: uppercase;
+		font-weight: 700;
+		text-align: center;
+	}
+	&-block{
+		width: 32%;
+		height: 100%;
+		padding: 15px;
+		&:hover{
+			background-color: #fff;
+		}
+	}
+	&-p{
+		padding: 25px;
+	}
+	&-img{
+		padding: 25px;
+	}
+}
+footer{
+	background-color: #333333;
+}
+.footer{
+	&-span{
+		color: #7d7d7d;
+	}
+	&-p{
+		padding-left: 25px;
+		color: white;
+	}
+	&-a{
+		color: white;
+		text-decoration: underline;
+		text-align: center;
+	}
+	&-div{
+		padding-top: 45px;
+		padding-bottom: 55px;
+	}
+	&_form{
+		&-h3{
+			text-transform: uppercase;
+			color: white;
+			text-align: center;
+		}
+		&-input{
+			width: 100%;
+			background-color: #fff;
+			padding: 10px 35px;
+			border-radius: 5px;
+			border: none;
+			margin-top: 5px;
+		}
+		&-textarea{
+			width: 100%;
+			background-color: #fff;
+			padding: 10px 35px;
+			border-radius: 5px;
+			border: none;
+			margin-top: 5px;
+			height: 120px;
+		}
+		&-button{
+			background-color: @blue;
+			color: white;
+			border: none;
+			width: 100%;
+			padding: 10px 25px;
+			border-radius: 5px;
+		}
 	}
 }
