--- a/САЙТ/css/style.css
+++ b/САЙТ/css/style.css
@@ -353,3 +353,30 @@ footer {
   padding: 10px 25px;
   border-radius: 5px;
 }
+@media screen and (max-width: 720px) {
+  .header-top {
+    font-size: 12px;
+    height: 100%;
+  }
+  .header-top-logo {
+    margin-left: 25%;
+  }
+  .header-top-li {
+    display: block;
+  }
+  header {
+    width: 100%;
+    height: 100%;
+  }
+  .trubi-block {
+    width: 100%;
+  }
+  .v_nalichii-block {
+    width: 100%;
+    height: 100%;
+  }
+  .pochemu-block {
+    width: 100%;
+    height: 100%;
+  }
+}
