--- a/САЙТ/css/style.css
+++ b/САЙТ/css/style.css
@@ -89,6 +89,7 @@ header {
   border: none;
   text-align: center;
   margin-top: 75px;
+  margin-bottom: 5%;
 }
 .popup {
   width: 300px;
@@ -174,10 +175,10 @@ header {
 }
 .proizv-block {
   margin-bottom: 50px;
+  width: 25%;
 }
 .proizv-block:hover {
-  width: 280px;
-  height: 200px;
+  width: 25%;
   background-color: white;
   background-size: cover;
 }
@@ -376,6 +377,78 @@ footer {
     height: 100%;
   }
   .pochemu-block {
+    width: 100%;
+    height: 100%;
+  }
+}
+.toggle-nav {
+  display: none;
+}
+@media screen and (max-width: 860px) {
+  .menu {
+    position: relative;
+    display: inline-block;
+  }
+  .menu ul.active {
+    display: none;
+  }
+  .menu ul {
+    width: 100%;
+    padding: 10px 18px;
+    -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
+    border-radius: 3px;
+    background: #fff;
+  }
+  .menu ul:after {
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    top: 0%;
+    left: 22px;
+    content: '';
+    -webkit-transform: translate(0%, -100%);
+            transform: translate(0%, -100%);
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    border-bottom: 7px solid #fff;
+  }
+  .menu li {
+    margin: 5px 0px 5px 0px;
+    float: none;
+    display: block;
+  }
+  .menu a {
+    display: block;
+  }
+  .toggle-nav {
+    padding: 20px;
+    float: left;
+    display: inline-block;
+    -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
+    border-radius: 3px;
+    background: #fff;
+    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
+    color: #777;
+    font-size: 20px;
+    -webkit-transition: color linear 0.15s;
+    transition: color linear 0.15s;
+  }
+  .toggle-nav:hover,
+  .toggle-nav.active {
+    text-decoration: none;
+    color: #66a992;
+  }
+  .search-form {
+    margin: 12px 0px 0px 20px;
+    float: left;
+  }
+  .search-form input {
+    -webkit-box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.1);
+            box-shadow: -1px 1px 2px rgba(0, 0, 0, 0.1);
+  }
+  .header-top-li {
     width: 100%;
     height: 100%;
   }
