--- a/css/style.css
+++ b/css/style.css
@@ -1,395 +1,1 @@
-/* line 2, style.less */
-body {
-  font-family: 'Open Sans', sans-serif;
-}
-/* line 5, style.less */
-header {
-  background-image: url(../img/header/1.png);
-}
-/* line 9, style.less */
-.header-a {
-  text-decoration: none;
-  color: white;
-  width: 100%;
-  height: 100%;
-}
-/* line 14, style.less */
-.header-a:hover {
-  text-decoration: none;
-  color: white;
-  width: 100%;
-  height: 100%;
-}
-/* line 21, style.less */
-.header-ul {
-  background-color: #313030;
-  width: 100%;
-  height: 100%;
-  color: white;
-  margin: 30px 0px;
-}
-/* line 28, style.less */
-.header-li {
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-  margin: 7px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  width: 90px;
-  height: 90px;
-  line-height: 90px;
-}
-/* line 38, style.less */
-.header-button {
-  color: white;
-  background-color: #ff2d2d;
-  text-decoration: none;
-  padding: 12px 10px;
-  width: 220px;
-  height: 50px;
-  border-radius: 10px;
-  margin-top: 35px;
-  border: none;
-}
-/* line 49, style.less */
-.header-video {
-  background-image: url(../img/header/video.png);
-  background-size: cover;
-  margin-bottom: 50px;
-  text-align: center;
-  margin-left: auto;
-}
-/* line 58, style.less */
-h1 {
-  font-weight: 900;
-  font-size: 55px;
-  letter-spacing: 1.5px;
-}
-/* line 64, style.less */
-.header-li {
-  display: inline-block;
-  text-decoration: none;
-  width: 90px;
-  height: 90px;
-  line-height: 90px;
-  font-weight: 700;
-}
-/* line 71, style.less */
-.header-li:hover {
-  background-color: #ff2d2d;
-}
-/* line 75, style.less */
-.our-p {
-  padding: 15px 0;
-}
-/* line 78, style.less */
-.DYK {
-  padding-top: 50px;
-}
-/* line 80, style.less */
-.DYK-h1 {
-  font-size: 40px;
-  text-transform: uppercase;
-  letter-spacing: 1.5px;
-}
-/* line 85, style.less */
-.DYK-p {
-  font-size: 16px;
-  margin-top: 35px;
-  margin-bottom: 35px;
-}
-/* line 90, style.less */
-.DYK-button {
-  width: 200px;
-  height: 45px;
-  border-color: red;
-  background-color: #fff;
-  color: red;
-  padding: 12px 10px;
-  border-radius: 10px;
-}
-/* line 99, style.less */
-.DYK-img {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-/* line 103, style.less */
-.DYK-block {
-  height: 270px;
-}
-/* line 106, style.less */
-.DYK-h4 {
-  font-weight: 900;
-  padding-bottom: 20px;
-}
-/* line 110, style.less */
-.DYK-animation {
-  margin-bottom: 170px;
-}
-/* line 115, style.less */
-.feature-h1 {
-  font-size: 42px;
-  margin: 25px auto;
-}
-/* line 119, style.less */
-.feature-p {
-  font-size: 16px;
-  padding-bottom: 20px;
-}
-/* line 123, style.less */
-.feature-border {
-  border-bottom: 2px solid #ff2d2d;
-  display: block;
-  margin: auto;
-  width: 300px;
-}
-/* line 129, style.less */
-.feature-ul {
-  margin: 30px auto;
-}
-/* line 132, style.less */
-.feature-li {
-  display: inline-block;
-  font-size: 22px;
-  padding: 0 10px;
-}
-/* line 137, style.less */
-.feature-a {
-  text-decoration: none;
-  color: #797979;
-}
-/* line 140, style.less */
-.feature-a:hover {
-  color: #ff2d2d;
-  text-decoration: none;
-}
-/* line 145, style.less */
-.feature-img {
-  display: inline-block;
-  height: 290px;
-  width: 290px;
-  padding-right: 7px;
-  padding-top: 15px;
-}
-/* line 155, style.less */
-.meet-h1 {
-  font-size: 42px;
-  margin-bottom: 20px;
-  font-weight: 900;
-}
-/* line 160, style.less */
-.meet-p1 {
-  font-weight: 500;
-  font-size: 16px;
-  border-bottom: 2px solid #ff2d2d;
-  width: 350px;
-  padding-bottom: 25px;
-}
-/* line 169, style.less */
-.mark-main {
-  height: 460px;
-  width: 320px;
-  margin-top: 25px;
-}
-/* line 174, style.less */
-.mark-h4 {
-  font-weight: 700;
-  margin-top: 20px;
-  font-size: 30px;
-}
-/* line 179, style.less */
-.mark-p {
-  font-weight: 500;
-}
-/* line 182, style.less */
-.mark-li {
-  display: inline-block;
-  text-decoration: none;
-  padding-right: 25px;
-  padding-top: 40px;
-  padding-left: 0;
-  margin: 0;
-  font-style: italic;
-  font-size: 16px;
-}
-/* line 192, style.less */
-.mark-img {
-  width: 160px;
-  padding-top: 30px;
-  margin-top: 50px;
-  height: 200px;
-  background-image: url(../img/mark/dog-2332240_640.jpg);
-  background-size: cover;
-}
-/* line 201, style.less */
-.mark-a {
-  text-decoration: none;
-  color: #696969;
-}
-/* line 204, style.less */
-.mark-a:hover {
-  color: #696969;
-  text-decoration: none;
-}
-/* line 209, style.less */
-.mark-ul {
-  margin: 0;
-  padding: 0;
-}
-/* line 214, style.less */
-.mark-img1 {
-  background-image: url(../img/mark/dog-2332240_640.jpg);
-  background-position: center center;
-  background-size: cover;
-  height: 425px;
-  margin-top: 25px;
-}
-/* line 222, style.less */
-.img-responsive {
-  height: 400px;
-  margin-top: 25px;
-}
-/* line 226, style.less */
-#design_tips {
-  background-color: #2c2c2c;
-}
-/* line 230, style.less */
-.design-h1 {
-  padding: 25px 0;
-  font-size: 42px;
-  color: white;
-}
-/* line 235, style.less */
-.design-p {
-  color: white;
-  text-align: center;
-}
-/* line 239, style.less */
-.design-input {
-  margin-top: 30px;
-  width: 520px;
-  height: 55px;
-  line-height: 55px;
-  border-radius: 5px;
-  margin-left: 30%;
-  padding: 10px;
-}
-/* line 248, style.less */
-.design-button {
-  width: 210px;
-  height: 55px;
-  margin-left: 20px;
-  border-radius: 5px;
-  color: white;
-  border: none;
-  background-color: #ff2d2d;
-  margin-bottom: 50px;
-}
-/* line 258, style.less */
-.design-a {
-  text-decoration: none;
-}
-/* line 260, style.less */
-.design-a:hover {
-  text-decoration: none;
-}
-/* line 263, style.less */
-.design-a:active {
-  text-decoration: none;
-}
-/* line 270, style.less */
-.get {
-  margin-bottom: 100px;
-}
-/* line 272, style.less */
-.get-h1 {
-  font-size: 42px;
-  margin-top: 45px;
-}
-/* line 276, style.less */
-.get-p1 {
-  font-size: 16px;
-  font-weight: 500;
-  padding: 25px 0px;
-}
-/* line 281, style.less */
-.get-border {
-  border: 2px solid #ff2d2d;
-  width: 250px;
-  margin-bottom: 45px;
-}
-/* line 286, style.less */
-.get-textarea {
-  width: 100%;
-  height: 100%;
-  background-color: #e5e5e5;
-  border: none;
-  padding: 15px;
-}
-/* line 293, style.less */
-.get-input {
-  width: 270px;
-  background-color: #e5e5e5;
-  border-radius: 5px;
-  text-decoration: none;
-  border: none;
-  height: 55px;
-  padding: 15px;
-  margin-bottom: 15px;
-}
-/* line 303, style.less */
-.get-button {
-  width: 100%;
-  border: none;
-  background-color: #ff2d2d;
-  margin-top: 5px;
-  border-radius: 5px;
-  text-decoration: none;
-  height: 55px;
-}
-/* line 312, style.less */
-.get-black {
-  background-color: black;
-  height: 100%;
-  height: 365px;
-}
-/* line 318, style.less */
-.get-h4 {
-  color: white;
-  font-size: 18pt;
-  margin-bottom: 30px;
-  margin-top: 50px;
-  padding-left: 50px;
-}
-/* line 326, style.less */
-.get-black p {
-  padding-top: 25px;
-  color: white;
-  padding-left: 50px;
-}
-/* line 331, style.less */
-footer {
-  background-color: #313030;
-}
-/* line 336, style.less */
-.footer-p {
-  padding: 40px 0;
-  color: white;
-}
-/* line 340, style.less */
-.footer-li {
-  display: inline-block;
-}
-/* line 343, style.less */
-.footer-img {
-  padding: 40px 0;
-}
-/* line 346, style.less */
-.footer-a {
-  text-decoration: none;
-}
-/* line 348, style.less */
-.footer-a:hover {
-  background-color: #ff2d2d;
-  border-radius: 50%;
-}
+@font-face{font-family:'CompPro';src:url(../fonts/PFDinTextCompPro-Regular.ttf);font-weight:normal;font-style:normal}body{font-family:'CompPro'}.header-top-li{font-size:20px;font-family:'CompPro';padding-right:10px;font-weight:700;display:inline-block;text-transform:uppercase}.header-top-logo{color:#000;text-decoration:none}.header-top-ul a{text-decoration:none;color:#000}.header-top-ul a:hover{border-bottom:3px solid #00f;padding-bottom:15px}.header-top-phone,.header-top-mail{font-size:18px}.header-top-phone{font-weight:700}.header-top-mail{font-weight:300}.fa{font-size:20px;color:#00f;padding-right:10px}.header-top-a{text-decoration:none;color:#000}.header-top{height:105px;line-height:105px}header{background-image:url(../img/header/fon.png);background-size:cover;height:100%}.header-h1{font-weight:700;padding-top:125px;font-size:64px;padding-bottom:55px}.header-span{font-size:22px;vertical-align:middle;padding-left:10px;font-weight:lighter}.header-icon{margin:auto;text-decoration:none;color:#000}.header-icon:hover{color:#00f;text-decoration:none}.header-button{background-color:#69c;color:#fff;font-size:23px;padding:20px 10px;border-radius:5px;height:100%;text-transform:uppercase;width:100%;outline:none;border:none;text-align:center;margin-top:75px;margin-bottom:5%}.popup{width:300px;height:444px;background-color:#fff;position:fixed;left:50%;-webkit-transform:translateX(-50%) translateY(-170%);transform:translateX(-50%) translateY(-170%);top:25%;-webkit-transition:all .2s;transition:all .2s;opacity:1;z-index:999}.popup:target{-webkit-transform:translateX(-50%) translateY(0);transform:translateX(-50%) translateY(0);-webkit-box-shadow:0 0 10px rgba(0,0,0,0.5);box-shadow:0 0 10px rgba(0,0,0,0.5);border:1px solid #fff;border-radius:12px}.popup-close{position:absolute;top:1rem;right:1rem;text-decoration:none;font-size:2rem;color:#000}.popup h4{margin-top:40px;margin-bottom:23px;font-weight:700}.popup input{padding:15px;border:2px solid #69c;border-radius:5px;margin:2px;width:70%;margin-left:15%;display:inline-block}.zakazat{background-color:#69c;border-radius:10px;height:60px;line-height:60px;width:270px;margin-top:20px;color:#fff;cursor:pointer;border:none;margin-left:5%}.zakazat-span{color:#69c;padding-left:5%}.proizv-h1{text-transform:uppercase;text-align:center;padding-top:5%;font-size:40px}.proizv-border{border-bottom:3px solid #69c;text-align:center;margin:auto;width:100px;content:'';padding-top:20px;margin-bottom:120px}.proizv-span{font-size:30px;color:#69c}.proizv-p{font-size:20px}.proizv-block{margin-bottom:50px;width:25%}.proizv-block:hover{width:25%;background-color:#fff;background-size:cover}#proizvodstvennoe{background-color:#f8f8f8;height:100%}#sobst_proizv{background-image:url(../img/sobs_proizv/fon.png);background-size:cover;height:100%}.sobst_proizv-h1{text-transform:uppercase;font-size:40px;padding-top:5%;text-align:center}.sobst_proizv-block{background-image:url(../img/sobs_proizv/block-fon.png);background-size:cover;margin:5px}.sobst_proizv-h3{text-transform:uppercase;margin:50px;font-weight:900}#postavka{background-color:#f8f8f8}.postavka-h1{font-weight:800;text-transform:uppercase;text-align:center;padding-top:5%}.postavka-p{font-size:20px;padding:10px}.postavka-block{margin-right:15px}.postavka-block:hover{background-color:#fff}.trubi-h2{color:#69c;padding-top:25px}.trubi-p{font-size:20px;padding:20px 0;font-weight:300}.trubi-h3{font-size:20px;font-weight:800;padding-left:25px}.trubi-li{font-size:16px}.trubi-img{width:100%}.trubi-block{height:390px;background-color:#f8f8f8;margin-bottom:30px;width:32%;margin-right:10px}.trubi-button{width:270px;height:60px;line-height:60px;font-size:20px;border:none;color:#fff;background-color:#69c;border-radius:5px}#v_nalichii{background-color:#f8f8f8;height:100%}.v_nalichii-h1{font-size:40px;text-transform:uppercase;font-weight:800;text-align:center;padding-top:5%}.v_nalichii-h4{padding-left:30px}.v_nalichii-block{background-color:#fff;padding:20px;width:32%;margin-right:10px}#pochemu{background-color:#f8f8f8}.pochemu-h1{text-transform:uppercase;font-weight:700;text-align:center}.pochemu-block{width:32%;height:100%;padding:15px}.pochemu-block:hover{background-color:#fff}.pochemu-p{padding:25px}.pochemu-img{padding:25px}footer{background-color:#333}.footer-span{color:#7d7d7d}.footer-p{padding-left:25px;color:#fff}.footer-a{color:#fff;text-decoration:underline;text-align:center}.footer-div{padding-top:45px;padding-bottom:55px}.footer_form-h3{text-transform:uppercase;color:#fff;text-align:center}.footer_form-input{width:100%;background-color:#fff;padding:10px 35px;border-radius:5px;border:none;margin-top:5px}.footer_form-textarea{width:100%;background-color:#fff;padding:10px 35px;border-radius:5px;border:none;margin-top:5px;height:120px}.footer_form-button{background-color:#69c;color:#fff;border:none;width:100%;padding:10px 25px;border-radius:5px}@media screen and (max-width:720px){.header-top{font-size:12px;height:100%}.header-top-logo{margin-left:25%}.header-top-li{display:block}header{width:100%;height:100%}.trubi-block{width:100%}.v_nalichii-block{width:100%;height:100%}.pochemu-block{width:100%;height:100%}}.toggle-nav{display:none}@media screen and (max-width:860px){.menu{position:relative;display:inline-block}.menu ul.active{display:none}.menu ul{width:100%;padding:10px 18px;-webkit-box-shadow:0 1px 1px rgba(0,0,0,0.15);box-shadow:0 1px 1px rgba(0,0,0,0.15);border-radius:3px;background:#fff}.menu ul:after{width:0;height:0;position:absolute;top:0;left:22px;content:'';-webkit-transform:translate(0, -100%);transform:translate(0, -100%);border-left:7px solid transparent;border-right:7px solid transparent;border-bottom:7px solid #fff}.menu li{margin:5px 0 5px 0;float:none;display:block}.menu a{display:block}.toggle-nav{padding:20px;float:left;display:inline-block;-webkit-box-shadow:0 1px 1px rgba(0,0,0,0.15);box-shadow:0 1px 1px rgba(0,0,0,0.15);border-radius:3px;background:#fff;text-shadow:0 1px 0 rgba(0,0,0,0.5);color:#777;font-size:20px;-webkit-transition:color linear .15s;transition:color linear .15s}.toggle-nav:hover,.toggle-nav.active{text-decoration:none;color:#66a992}.search-form{margin:12px 0 0 20px;float:left}.search-form input{-webkit-box-shadow:-1px 1px 2px rgba(0,0,0,0.1);box-shadow:-1px 1px 2px rgba(0,0,0,0.1)}.header-top-li{width:100%;height:100%}}
